--- a/wall-e-GUI/wall-e-GUI/index.html
+++ b/wall-e-GUI/wall-e-GUI/index.html
@@ -79,7 +79,8 @@
     $(document).ready(function () {
         console.log("ready!");
    
-
+        var full = window.location.protocol + '//' + window.location.hostname + (window.location.port ? ':' + window.location.port : '');
+        console.log(full);
         $("#btn_balance").click(function () {
 
             $("#main").load("views/balance.view.html", function () {
